text overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -489,6 +489,14 @@ nav a:hover {
     width: 4vw;
   }
 
+  #social-networking-nosql a {
+    font-size: 2.2vw;
+  }
+
+  #social-networking-nosql:hover h5 {
+    font-size: 1.1vw;
+  }
+
 
   /* Contact Me */
   #linkedin {
@@ -562,5 +570,13 @@ nav a:hover {
 
   #travelot, #note-taker, #social-networking-nosql, #employee-tracker, #run-buddy {
       height: 20vw;
+  }
+
+  #social-networking-nosql a {
+    font-size: 2.25vw;
+  }
+
+  #social-networking-nosql:hover h5 {
+    font-size: .8vw;
   }
 }
